# pypypan

./: .gitignore  README.md  pyproject.toml  user-config.py.dist
.github/workflows/: python-package-test.yml  python-package.yml  python-test.yml
pypypan/: excel.py  main.py  upload.py
test/: helper_functions.py  test_excel.py  test_upload.py
test/data/: data_honda.xls  data_test.xls  data_test_error.xls
