[tool.poetry]
name = "pypypan"
version = "0.8.0"
description = ""
authors = ["Ate te Voortwis <atv@allseas.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pywikibot = "^6.6.3"
wikitextparser = "^0.48.0"
requests-oauthlib = "^1.3.0"
pandas = "^1.4.0"
xlrd = "^2.0.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
numpy = "^1.22.1"
Pillow = "^9.0.0"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pypypan = 'pypypan.main:main'
